--- a/app/globals.css
+++ b/app/globals.css
@@ -206,3 +206,47 @@
     scrollbar-color: rgb(253, 186, 116) rgba(253, 186, 116, 0.2);
   }
 }
+
+.leaflet-control-attribution {
+  display: none !important;
+}
+
+.leaflet-bottom.leaflet-right {
+  @apply !bottom-4 !right-4 md:!bottom-8 md:!right-32;
+}
+
+.leaflet-control-zoom {
+  border: 2px solid #0ea5e9 !important;
+  border-radius: 0.5rem !important;
+  overflow: hidden;
+  box-shadow:
+    0 4px 6px -1px rgb(0 0 0 / 0.1),
+    0 2px 4px -2px rgb(0 0 0 / 0.1) !important;
+}
+
+.leaflet-control-zoom a {
+  background-color: white !important;
+  color: black !important;
+  border: none !important;
+  border-bottom: 1px solid #e5e5e5 !important;
+  width: 2.5rem !important;
+  height: 2.5rem !important;
+  line-height: 2.5rem !important;
+  font-size: 1.25rem !important;
+  font-weight: bold !important;
+}
+
+.leaflet-control-zoom a:hover {
+  background-color: #f5f5f5 !important;
+}
+
+.leaflet-control-zoom a:last-child {
+  border-bottom: none !important;
+}
+
+.leaflet-right .leaflet-control {
+  margin-right: 0px !important;
+}
+.leaflet-bottom .leaflet-control {
+  margin-bottom: 0px !important;
+}
