--- a/app/globals.css
+++ b/app/globals.css
@@ -219,7 +219,7 @@
 }
 
 .leaflet-control-zoom {
-  border: 2px solid #0ea5e9 !important;
+  border: 2px solid #0084d1 !important;
   border-radius: 0.5rem !important;
   overflow: hidden;
   box-shadow:
